<resources>
    <string name="app_name">Tipun-Android-App</string>
    <string name="title_activity_bottom_nav">BottomNavActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="icSearch">Search</string>
    <string name="icFavorite">Favorite</string>
    <string name="icAccount">Account</string>
    <string name="title_activity_test">TestActivity</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="hintUsername">Tên đăng nhập</string>
    <string name="hintPassword">Mật khẩu</string>
    <string name="rememberPassword">Ghi nhớ mật khẩu của tôi</string>
    <string name="login">Đăng nhập</string>
    <string name="forgetPassword">Quên mật khẩu?</string>
    <string name="line_break"><![CDATA[<br/>]]></string>
    <string name="bla1">Hoặc đăng nhập bằng</string>
    <string name="bla2">Chưa phải thành viên?</string>
    <string name="signup">Đăng ký</string>
    <string name="taotkmoi">Tạo tài khoản mới</string>
    <string name="icPostRoom">Post Room</string>
    <string name="p1_details">Phòng 1</string>
    <string name="button_main">Phòng 1</string>
    <string name="button_room1details">Phòng 1</string>
    <string name="google_client_id">1002741513057-96glclnhaktlt5qdf08brkeqt95flf15.apps.googleusercontent.com</string>
</resources>